--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NEXTAUTH_URL=https://vrv-admin.vercel.app
 
 NEXTAUTH_SECRET=NZEgNevJHKKJl7i/mu0jZSEowhcLs0a/hg//qrEFjyU=
 
-DATABASE_URL="mysql://root:dbmasteruserTestPwd@localhost/admin_bhimax"
+DATABASE_URL="mysql://root:dbmasteruserTestPwd@88.119.167.100/admin_bhimax"
 
 # DATABASE_URL="mysql://root@localhost/Bhimax"
 
