--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NEXTAUTH_URL=https://vrv-admin.vercel.app
+NEXTAUTH_URL=https://vrv-assigment.vercel.app/
+# NEXTAUTH_URL=http://localhost:3000
 
 NEXTAUTH_SECRET=NZEgNevJHKKJl7i/mu0jZSEowhcLs0a/hg//qrEFjyU=
 
