new auth url added

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-NEXTAUTH_URL=https://vrv-assigment.vercel.app/
+# NEXTAUTH_URL=https://vrv-assigment.vercel.app/
 # NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://vrv-assigment-hqn15u7qf-shiwam18s-projects.vercel.app/
 
 NEXTAUTH_SECRET=NZEgNevJHKKJl7i/mu0jZSEowhcLs0a/hg//qrEFjyU=
 
